{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 647,
  "lineage": "f4d3a149-e8b8-1609-c62e-ca0418a862c5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b9ecf71fe947bbdd",
            "arn": "arn:aws:ec2:ap-south-1:278128687158:instance/i-045e5145a9153624c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-045e5145a9153624c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "TEST",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c43733a4f88c8210",
            "private_dns": "ip-10-0-0-201.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.201",
            "public_dns": "ec2-13-127-214-14.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.127.214.14",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e757d59cc1575769",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-038552f8160626f7b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b08ef24d1de5d572",
            "tags": {
              "Name": "EC2-PUBLIC"
            },
            "tags_all": {
              "Name": "EC2-PUBLIC"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-038552f8160626f7b"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh-security-grp",
            "aws_subnet.public-subnet-1",
            "aws_vpc.vpc",
            "data.aws_ami.MY_AMI_ID"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "MY_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:278128687158:internet-gateway/igw-04df09bde8725eee8",
            "id": "igw-04df09bde8725eee8",
            "owner_id": "278128687158",
            "tags": {
              "Name": "my_gateway"
            },
            "tags_all": {
              "Name": "my_gateway"
            },
            "vpc_id": "vpc-0a0ea5a4843c7ab72"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:278128687158:route-table/rtb-0a3a29d66b5916298",
            "id": "rtb-0a3a29d66b5916298",
            "owner_id": "278128687158",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04df09bde8725eee8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Pub-route"
            },
            "tags_all": {
              "Name": "Pub-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0ea5a4843c7ab72"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.MY_IGW",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-RT-assocation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a33f4ec7de0a0581",
            "route_table_id": "rtb-0a3a29d66b5916298",
            "subnet_id": "subnet-0b08ef24d1de5d572"
          },
          "dependencies": [
            "aws_internet_gateway.MY_IGW",
            "aws_route_table.Public-RT",
            "aws_subnet.public-subnet-1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-security-grp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:278128687158:security-group/sg-038552f8160626f7b",
            "description": "Enable SSH connection for Bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-038552f8160626f7b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Access",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "SSh-security-grp-Bastion",
            "name_prefix": "",
            "owner_id": "278128687158",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SSh security Group"
            },
            "tags_all": {
              "Name": "SSh security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0ea5a4843c7ab72"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:278128687158:subnet/subnet-0981233f120d32f0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0981233f120d32f0a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "278128687158",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-Sub"
            },
            "tags_all": {
              "Name": "Private-Sub"
            },
            "vpc_id": "vpc-0a0ea5a4843c7ab72"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:278128687158:subnet/subnet-0b08ef24d1de5d572",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b08ef24d1de5d572",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "278128687158",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Pub-Sub-1"
            },
            "tags_all": {
              "Name": "Pub-Sub-1"
            },
            "vpc_id": "vpc-0a0ea5a4843c7ab72"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:278128687158:vpc/vpc-0a0ea5a4843c7ab72",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-083102e1e09335c24",
            "default_route_table_id": "rtb-03d0f54e3ff5ff183",
            "default_security_group_id": "sg-04a817c50db7c536c",
            "dhcp_options_id": "dopt-0f09bc2f2c9f5d89e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a0ea5a4843c7ab72",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03d0f54e3ff5ff183",
            "owner_id": "278128687158",
            "tags": {
              "Name": "Test_vpc"
            },
            "tags_all": {
              "Name": "Test_vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}